# qa-citoyen-canadien

./: .gitignore  README.md  pyproject.toml
src/: qa.ipynb  qa.md
